Alterado o esquema de pasta e alterado o método de autenticação